<resources>
    <string name="app_name">Aqaar</string>
    <string name="map_api_key">AIzaSyCbc2Y5AIwZ8uUeHRUXiozGN3CnpjKT0oI</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="user_name">Full Name</string>
    <string name="user_name2">User Name</string>

    <string name="phone">Phone Number</string>
    <string name="you_already_have_an_account_log_in">Already have an account! login</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="bank_account">Bank account </string>
    <string name="terms_and_conditions">Terms of use</string>
    <string name="about_app">About Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>

    <string name="skip">skip</string>

    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="back">Back</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="em_exist">Email or Phone number is exist</string>
    <string name="profile">Profile</string>
    <string name="general_settings">General Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language_settings">Language Settings</string>
    <string name="no_details">No details</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Account Name</string>
    <string name="account_iban">Account IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="ok">OK</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="done">Done</string>

    <string name="next">Next</string>

    <string name="name">name</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="location">Location</string>
    <string name="share">share</string>
    <string name="edit">Edit</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="change_language">Change language</string>
    <string name="detials">Details</string>
    <string name="register">Register</string>
    <string name="upload_image">Upload Image</string>
    <string name="ads_photos">Ads Photos</string>
    <string name="about">About</string>
    <string name="time">Time</string>
    <string name="map">map</string>
    <string name="share_in">Share in</string>

    <string name="blokced">User is blocked</string>
    <string name="enter_code">Enter code</string>
    <string name="we_ll_never_share_or_sell_your_phone_number_your_privacy_is_100_guaranteed">We\'ll never share or sell your phone number your privacy is 100% guaranteed.</string>
    <string name="enter_the_sms_verification_code_below_that_was_sent_to_your_mobile_phone">Enter the SMS verification code below that was sent to your mobile phone</string>
    <string name="inc_code_verification">Incorrect code verification</string>
    <string name="you_will_receive_4_digit">You will receive 4 digit code on your mobile</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="inc_code">Incorrect code</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="since">since</string>
    <string name="no_name">No name</string>
    <string name="more_details">More details :</string>
    <string name="no_search_result">No search result</string>
    <string name="search_results">Search results</string>
    <string name="result">Results</string>
    <string name="from">From</string>
    <string name="no_categories_to_display">No categories to display</string>
    <string name="sms">Sms</string>
    <string name="sign_out">Sign out</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="wil_rev_req">Will review your request by admin</string>
    <string name="add_photo">Add photo</string>
    <string name="category">Category</string>
    <string name="city">City</string>
    <string name="ch_city">Choose city</string>
    <string name="ch">Choose</string>
    <string name="select">Select</string>
    <string name="select_picture">Select picture</string>
    <string name="approved">Approved</string>
    <string name="no_notifications_to_display">No notifications to display</string>

    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">Minute Ago</string>
    <string name="min">Minute</string>
    <string name="an_hour_ago">An Hour Ago</string>
    <string name="hs">Hour</string>
    <string name="yesterday">Yesterday</string>
    <string name="day">day</string>
    <string name="type_a_message">type a message....</string>
    <string name="img_sent">image sent</string>
    <string name="pass_short">password too short</string>
    <string name="code">Code</string>
    <string name="create_an_account">Create an account</string>
    <string name="about_me">About me</string>
    <string name="accept_terms_and_conditions">Accept terms and conditions</string>
    <string name="ch_exper">Choose experience</string>
    <string name="ch_dept">Choose department</string>
    <string name="cnt_sign_accept">You can\'t sign up without accepting terms and conditions</string>
    <string name="services">Services</string>
    <string name="caregivers">Caregivers</string>
    <string name="careseekers">CareSeekers</string>
    <string name="no_service">No service</string>
    <string name="no_orders">No orders</string>
    <string name="orders">Orders</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="picture">picture</string>
    <string name="license">License</string>
    <string name="car_form">Car form</string>
    <string name="identity">Identity</string>
    <string name="ch_img_license">Choose image license</string>
    <string name="ch_img_identity">Choose image identity</string>
    <string name="ch_img_form">Choose image form</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="available_order">Available</string>
    <string name="pending_order">Pending</string>
    <string name="rate">Rate</string>
    <string name="settings">Settings</string>
    <string name="balance">Balance :</string>
    <string name="we_will_send_you_a_link_on_your_email_to_reset_password">We will send you a link on your email to reset password.</string>
    <string name="rate_is">Rate is :</string>
    <string name="rated_orders_this_week">Rated orders this week :</string>
    <string name="subject">Subject</string>

    <string name="add_ad">Add ad</string>
    <string name="offers">Offers</string>
    <string name="contracts_for_rent">Contracts for rent</string>
    <string name="chat">Chat</string>
    <string name="list">List</string>
    <string name="areas">Areas</string>
    <string name="no_ads_to_display">No ads to display</string>
    <string name="no_conversation">No conversation</string>
    <string name="ad_today">Ad today</string>
    <string name="search2">Search</string>
    <string name="search_by_advertisement_num_n_ad_owner">Search by advertisement num\nad owner phone</string>
    <string name="inc_phone_pas">Incorrect phone number or password</string>

    <string name="no_ads">No ads to display</string>
    <string name="sar">SAR</string>
    <string name="no_price">No price</string>
    <string name="metre_price">Metre price from</string>
    <string name="land_type">Land type</string>
    <string name="space">Space</string>
    <string name="interface1">Interface</string>
    <string name="location_on_map">Location on map</string>
    <string name="metre_price_to">Metre price to</string>
    <string name="size_from">Size from</string>
    <string name="size_to">Size to</string>
    <string name="type">Type</string>
    <string name="sakany">Residential</string>
    <string name="trade">Trade</string>
    <string name="num_bathroom">Num-bathroom</string>
    <string name="ad_type">Ad type</string>
    <string name="sale">Sale</string>
    <string name="buy">Buy</string>
    <string name="indemnity">Indemnity</string>
    <string name="complement">Complement</string>
    <string name="accommodation">Accommodation</string>
    <string name="families">Families</string>
    <string name="single">Single</string>
    <string name="found">Found</string>
    <string name="not_found">Not Found</string>
    <string name="garage">Garage</string>
    <string name="year">A Year</string>
    <string name="year2">2 Year</string>
    <string name="rent_period">Rent period</string>
    <string name="num_rooms">Num-rooms</string>
    <string name="kitchen">Kitchen</string>
    <string name="lift">Lift</string>
    <string name="metre_price2">Metre price</string>
    <string name="size">Size</string>
    <string name="street_width">Street width</string>
    <string name="type_amessage">Type Amessage</string>
    <string name="choose_departmnet">Choose Departmnet</string>
    <string name="no_department_to_select">No Department To Select</string>
    <string name="applay">Applay</string>
    <string name="description">Adversiment ِDetials</string>
    <string name="building_and_contracting">Building and contracting</string>
    <string name="title">Adversiment ِTitle</string>
    <string name="metr_price">Metr Price</string>
    <string name="accommodation_type">Accommodation type</string>
    <string name="Choose_aqaar_type">Choose Aqaar Type</string>
    <string name="email_the_advertiser">Email the advertiser</string>
    <string name="last_show">Last Show</string>
    <string name="joined_since">Joined since</string>
    <string name="num_salon">Num Salon</string>
    <string name="other_size">Other Size</string>
    <string name="other_street_size">Other Street Width</string>
    <string name="interfaces">Interfaces</string>
    <string name="aqar_size">Aqar Siz From</string>
    <string name="aqar_size_to">Aqar Size To</string>
    <string name="aqaar_adversiment_addation">Aqaar Adversiment Addation</string>
    <string name="metr_price_to">Metr Price To</string>
    <string name="metr_price_from">Metr Price From</string>
    <string name="descriptions">Descriptions</string>
    <string name="choose_num_bathroom">Choose  Bathroom Num</string>
    <string name="choose_advertise_type">choose sell or buy or taqbil</string>
    <string name="choose_complement">Choose Complement</string>
    <string name="choose_type_sakn">Choose Families or  Singles</string>
    <string name="choose_garag">Choose the car entrance</string>
    <string name="choose_aqar_peroid">Choose Beriod</string>
    <string name="choose_kitchen">Choose Kitchen</string>
    <string name="choose_salon">Choose Salon Num</string>
    <string name="choose_num_rooms">Choose bedrooms num</string>
    <string name="choose_left">Choose Lift</string>
    <string name="complete_info">Complete Information</string>


</resources>
