<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <data>

         <variable   name="backListener"
            type="com.creative.share.apps.aqaar.interfaces.Listeners.BackListener"
            />
        <variable
            name="orderModel"
            type="com.creative.share.apps.aqaar.models.Order2_Upload_Model" />
        <variable
            name="lang"
            type="String" />
        <variable
            name="catmodel"
            type="com.creative.share.apps.aqaar.models.CategoryDataModel.CategoryModel" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray0"
        android:orientation="vertical"

        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="@{()->backListener.back()}"
                >
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_left_arrow"
                    android:tint="@color/white"
                    android:padding="8dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    />
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/white"
                    android:clickable="false"
                    android:longClickable="false"
                    android:textSize="16sp"
                    android:text="@string/aqaar_adversiment_addation"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edt_bg"
                    >
                    <Spinner
                        android:id="@+id/spinneradcity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:backgroundTint="@color/colorPrimary"
                        >

                    </Spinner>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edt_bg"
                    >
                    <Spinner
                        android:id="@+id/spinnertype"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:backgroundTint="@color/colorPrimary"


                        >

                    </Spinner>
                </FrameLayout>


                <EditText
                    android:id="@+id/edtAdTitle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:singleLine="true"
                    android:background="@drawable/edt_bg"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/gray4"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:hint="@string/title"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    error="@{orderModel.title_error}"
                    android:text="@={orderModel.title}"

                    />
                <EditText
                    android:id="@+id/edtAdPrice"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:singleLine="true"
                    android:background="@drawable/edt_bg"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/gray4"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:hint="@string/metr_price"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:inputType="numberDecimal"
                    error="@{orderModel.metr_price_error}"

                    android:text="@={orderModel.metr_price}"
                    />
                <EditText
                    android:id="@+id/edtAdPriceto"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:singleLine="true"
                    android:background="@drawable/edt_bg"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/gray4"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:hint="@string/metr_price"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:inputType="numberDecimal"
                    error="@{orderModel.metr_price_to_error}"

                    android:text="@={orderModel.metr_price_to}"
                    />
                <EditText
                    android:id="@+id/edtaccommodation_type"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:singleLine="true"
                    android:background="@drawable/edt_bg"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/gray4"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:hint="@string/aqar_size"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    error="@{orderModel.aqar_size_error}"

                    android:text="@={orderModel.aqar_size}"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:singleLine="true"
                    android:background="@drawable/edt_bg"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/gray4"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:hint="@string/aqar_size_to"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:inputType="numberDecimal"
                    error="@{orderModel.aqar_size_to_error}"

                    android:text="@={orderModel.aqar_size_to}"                    />

                <EditText
                    android:id="@+id/edtAdDetails"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:singleLine="true"
                    android:background="@drawable/edt_bg"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/gray4"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:hint="@string/description"
                    android:padding="8dp"
                    android:gravity="top"
                    android:text="@={orderModel.aqar_text}"
                    error="@{orderModel.aqar_text_error}"
                    />


                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/send"
                    android:background="@drawable/btn_login"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:layout_marginBottom="30dp"
                    />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>
