<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="backListener"
            type="com.creative.share.apps.aqaar.interfaces.Listeners.BackListener" />

        <variable
            name="lang"
            type="String" />
        <variable
            name="adModel"
            type="com.creative.share.apps.aqaar.models.AdModel" />


    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:onClick="@{()->backListener.back()}"
                android:orientation="horizontal"

                >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="8dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_left_arrow"
                    android:tint="@color/white" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="200dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:text="@{adModel.aqar_title??@string/no_name}"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:singleLine="true"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            android:background="@color/gray0"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20sp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:minHeight="50dp"
                    android:gravity="center_vertical"
                    android:weightSum="2"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/metre_price"
                        android:background="@color/gray2"
                        android:minHeight="50dp"
                        android:gravity="center_vertical"


                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text='@{adModel.metr_price+" "+@string/sar}'
                        android:background="@color/gray2"
                        android:minHeight="50dp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:minHeight="50dp"
                    android:gravity="center_vertical"
                    android:weightSum="2"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/land_type"
                        android:background="@color/white"
                        android:minHeight="50dp"
                        android:gravity="center_vertical"


                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:background="@color/white"
                        android:minHeight="50dp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:minHeight="50dp"
                    android:gravity="center_vertical"
                    android:weightSum="2"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/space"
                        android:background="@color/gray2"
                        android:minHeight="50dp"
                        android:gravity="center_vertical"


                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:background="@color/gray2"
                        android:minHeight="50dp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:minHeight="50dp"
                    android:gravity="center_vertical"
                    android:weightSum="2"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/interface1"
                        android:background="@color/white"
                        android:minHeight="50dp"
                        android:gravity="center_vertical"


                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:background="@color/white"
                        android:minHeight="50dp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:minHeight="50dp"
                    android:gravity="center_vertical"
                    android:weightSum="2"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".8"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:text="@string/detials"
                        android:background="@color/gray2"
                        android:minHeight="50dp"
                        android:gravity="center_vertical"


                        />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:background="@color/gray2"
                        android:minHeight="50dp"
                        android:gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"

                        />

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/location_on_map"
                    />

                <fragment
                    android:id="@+id/map"
                    android:name="com.creative.share.apps.aqaar.activities_fragments.activity_ad_details.FragmentMapTouchListener"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"

                    />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>
